--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
   <title>Robot walking</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="roslib/roslib.js"> ></script>
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="dist/peer.js"></script>
   <script typs="test/javascript" src="js/ros_handle.js"></script>
   <script type="text/javascript" src="js/robot_client.js"></script>
-
+  <script type="text/javascript" src="js/MediaStreamRecorder.js"> </script>
 </head>
 <body>
   <div class="pure-g">
