--- a/index.html
+++ b/index.html
@@ -9,45 +9,50 @@
   <script typs="test/javascript" src="js/ros_handle.js"></script>
   <script type="text/javascript" src="js/robot_client.js"></script>
   <script type="text/javascript" src="js/MediaStreamRecorder.js"> </script>
+  <script type="text/javascript" src="dist/bootstrap.min.js"></script>
+  <!-- <link rel="stylesheet" href="dist/bootstrap.min.css" type="text/css" /> -->
+  <link rel="stylesheet" href="dist/bootstrap-responsive.min.css" type="text/css" />
+  <link rel="stylesheet" href="dist/style.css" type="text/css" />
 </head>
 <body>
-  <div class="pure-g">
+  <div class="container">
       <!-- Video area -->
-      <div class="pure-u-2-3" id="video-container">
-        <video id="their-video" autoplay></video>
-        <video id="my-video" muted="true" autoplay></video>
+      <div class="row">
+        <div id="video-container" class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+            <!-- <video id="their-video" autoplay></video> -->
+            <video id="my-video" muted="true" autoplay></video>
+        </div>
       </div>
+
       <!-- Steps -->
-      <div class="pure-u-1-3">
-        <h2>Video chat</h2>
-        <!-- Get local audio/video stream -->
-        <div id="step1">
-          <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
-          <div id="step1-error">
-            <p>Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
-            <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a>
+      <div class="row">
+          <h2>Video chat</h2>
+          <!-- Get local audio/video stream -->
+          <div id="step1" class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2">
+            <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
+            <div id="step1-error">
+              <p>Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
+              <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a>
+            </div>
           </div>
-        </div>
 
-        <!-- Make calls to others -->
-        <div id="step2">
-          <p>Your id: <span id="my-id">someid4</span></p>
-          <p>Share this id with others so they can call you.</p>
-          <h3>Make a call</h3>
-          <div class="pure-form">
-            <input type="text" placeholder="Call user id..." id="callto-id">
-            <a href="#" class="pure-button pure-button-success" id="make-call">Call</a>
+          <!-- Make calls to others -->
+          <div id="step2">
+            <p>Your id: <span id="my-id">someid4</span></p>
+            <p>Share this id with others so they can call you.</p>
+            <h3>Make a call</h3>
+            <div class="pure-form">
+              <input type="text" placeholder="Call user id..." id="callto-id">
+              <a href="#" class="pure-button pure-button-success" id="make-call">Call</a>
+            </div>
           </div>
-        </div>
 
-        <!-- Call in progress -->
-        <div id="step3">
-          <p>Currently in call with <span id="their-id">...</span></p>
-          <p><a href="#" class="pure-button pure-button-error" id="end-call">End call</a></p>
-        </div>
+          <!-- Call in progress -->
+          <div id="step3">
+            <p>Currently in call with <span id="their-id">...</span></p>
+            <p><a href="#" class="pure-button pure-button-error" id="end-call">End call</a></p>
+          </div>
       </div>
   </div>
-
-
 </body>
 </html>
