--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
       </div>
 
       <!-- Steps -->
-      <!-- <div class="row">
-          <h2>Video chat</h2>
-          <div id="step1">
+      <div class="row">
+          <div id="step1" class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 alert alert-warning">
+            <h4>Video chat</h4>
             <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
             <div id="step1-error">
-              <p>Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
-              <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a>
+              <p class="lead">Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
+              <!-- <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a> -->
+              <button class="btn btn-primary" id="step1-retry">Try again</a>
             </div>
           </div>
-      </div> -->
+      </div>
 
       <div class="row">
           <!-- Make calls to others -->
-          <div id="step2" class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-xs-4 col-xs-offset-1 well">
+          <div id="step2" class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-3 col-xs-offset-2 alert alert-info">
             <h4>Make Call</h4>
             <p>Your id is </p>
             <p id="my-id">someid4</p>
@@ -51,7 +52,7 @@
           </div>
 
           <!-- Call in progress -->
-          <div id="step3" class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-4 col-xs-offset-2 well">
+          <div id="step3" class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-3 col-xs-offset-2 alert alert-info">
             <h4>End Call</h4>
             <p>Now in call with </p>
             <p id="their-id">...</p>
