--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
             <p>Your id is </p>
             <p id="my-id">someid4</p>
             <!-- <p>Share this id with others so they can call you.</p> -->
-            <div class="pure-form">
-              <input type="text" placeholder="Call user id..." id="callto-id">
+              <!-- <input type="text" placeholder="Call user id..." id="callto-id"> -->
               <!-- <a href="#" class="btn btn-primary" id="make-call">Call</a> -->
-              <button class="btn btn-success" id="make-call">Make Call</button>
-            </div>
+              <btn class="btn btn-success" id="make-call">Make Call</btn>
           </div>
 
           <!-- Call in progress -->
@@ -56,10 +54,8 @@
             <h4>End Call</h4>
             <p>Now in call with </p>
             <p id="their-id">...</p>
-            <div>
             <!-- <a href="#" class="pure-button pure-button-error" id="end-call">End call</a> -->
             <btn class="btn btn-danger" id="end-call">End call</a>
-            </div>
           </div>
       </div>
   </div>
