--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <!-- Video area -->
       <div class="row">
         <div class="col-md-2 col-sm-2 col-xs-2">
-            <p id="my-id">someid4</p>
-            <btn class="btn btn-success" id="make-call">
+            <p id="my-id" class="pull-right">someid4</p>
+            <btn class="btn btn-success pull-right" id="make-call">
               <span class="glyphicon glyphicon-earphone"></span>
             </btn>
         </div>
@@ -38,7 +38,7 @@
 
       <!-- Steps -->
       <div class="row">
-          
+
           <div id="step1" class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 alert alert-warning">
             <h4>Video chat</h4>
             <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
