updated the robot client

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script type="text/javascript" src="dist/jquery.min.js"></script>
   <script type="text/javascript" src="dist/peer.js"></script>
   <script typs="test/javascript" src="js/ros_handle.js"></script>
-  <script type="text/javascript" src="js/robot_client.js"></script>
   <script type="text/javascript" src="js/MediaStreamRecorder.js"> </script>
   <script type="text/javascript" src="dist/bootstrap.min.js"></script>
   <link rel="stylesheet" href="dist/bootstrap.min.css" type="text/css" />
@@ -50,7 +49,7 @@
           </div>
       </div>
 
-      <div class="row">
+      <div class="row hidden" >
           <!-- Make calls to others -->
           <div id="step2" class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-3 col-xs-offset-2 alert alert-info">
             <h4>Make Call</h4>
@@ -72,5 +71,8 @@
           </div>
       </div>
   </div>
+
+  <script type="text/javascript" src="js/robot_client.js"></script>
+
 </body>
 </html>
