--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
 <html>
-	<head>
-		<META HTTP-EQUIV="Refresh" CONTENT="0;URL='login.do'">
-	</head>
+<head>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+  <title>Robot walking</title>
+  <script type="text/javascript" src="roslib/roslib.js"> ></script>
+  <script type="text/javascript" src="dist/jquery.min.js"></script>
+  <script type="text/javascript" src="dist/peer.js"></script>
+  <script typs="test/javascript" src="js/ros_handle.js"></script>
+  <script type="text/javascript" src="js/MediaStreamRecorder.js"> </script>
+  <script type="text/javascript" src="dist/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="dist/bootstrap.min.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="dist/bootstrap-responsive.min.css" type="text/css" /> -->
+  <link rel="stylesheet" href="dist/style.css" type="text/css" />
+</head>
+<body>
+  <div class="container-fluid">
+      <!-- Video area -->
+      <div class="row">
+        <div class="col-md-2 col-sm-2 col-xs-2">
+            <p id="my-id" class="pull-right">someid4</p>
+            <btn class="btn btn-success pull-right" id="make-call">
+              <span class="glyphicon glyphicon-earphone"></span>
+            </btn>
+        </div>
+        <div id="video-container" class="col-md-8 col-sm-8 col-xs-8">
+           <video id="their-video" autoplay></video> 
+            <video id="my-video" muted="true" autoplay></video>
+        </div>
+        <div class="col-md-2 col-sm-2 col-xs-2">
+            <p id="their-id">...</p>
+            <btn class="btn btn-danger" id="end-call">
+              <span class="glyphicon glyphicon-remove"></span>
+            </btn>
+        </div>
+      </div>
 
-	<body>
-		<p>Loading ...</p>
-	</body>
+      <!-- Steps -->
+      <div class="row">
+
+          <div id="step1" class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 alert alert-warning">
+            <h4>Video chat</h4>
+            <p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
+            <div id="step1-error">
+              <p class="lead">Failed to access the webcam and microphone. Make sure to run this demo on an http server and click allow when asked for permission by the browser.</p>
+              <!-- <a href="#" class="pure-button pure-button-error" id="step1-retry">Try again</a> -->
+              <button class="btn btn-primary" id="step1-retry">Try again</a>
+            </div>
+          </div>
+      </div>
+
+      <div class="row hidden" >
+          <!-- Make calls to others -->
+          <div id="step2" class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-3 col-xs-offset-2 alert alert-info">
+            <h4>Make Call</h4>
+            <p>Your id is </p>
+            <p id="my-id">someid4</p>
+            <!-- <p>Share this id with others so they can call you.</p> -->
+              <!-- <input type="text" placeholder="Call user id..." id="callto-id"> -->
+              <!-- <a href="#" class="btn btn-primary" id="make-call">Call</a> -->
+              <btn class="btn btn-success" id="make-call">Make Call</btn>
+          </div>
+
+          <!-- Call in progress -->
+          <div id="step3" class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-3 col-xs-offset-2 alert alert-info">
+            <h4>End Call</h4>
+            <p>Now in call with </p>
+            <p id="their-id">...</p>
+            <!-- <a href="#" class="pure-button pure-button-error" id="end-call">End call</a> -->
+            <btn class="btn btn-danger" id="end-call">End call</a>
+          </div>
+      </div>
+  </div>
+
+  <script type="text/javascript" src="js/robot_client.js"></script>
+
+</body>
 </html>
